--- a/src/fe/package.json
+++ b/src/fe/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@azure/service-bus": "^1.1.2",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vuetify": "^2.1.0"
