--- a/src/be/package.json
+++ b/src/be/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "@azure/service-bus": "^1.1.2",
-    "core-js": "^3.4.4"
+    "core-js": "^3.4.4",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
